<resources>
    <string name="app_name">RTP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rtp_logo">RTP Logo</string>
    <string name="rtp_rowtian">rowtian</string>
    <string name="rtp_technologies">technologies</string>
    <string name="rtp_client_name">Client Name</string>
    <string name="rtp_access_code">Access Code</string>
    <string name="rtp_login_button_text">Login</string>
    <string name="rtp_text_button">not a client?</string>
    <string name="rtp_copyright">© Rowtian Technologies</string>
    <string name="rtp_access_code_error">Sorry the access code is not valid</string>
    <string name="rtp_about">About</string>
    <string name="rtp_settings">Settings</string>
    <string name="rtp_t_amp_c"><![CDATA[T&C]]></string>
    <string name="rtp_projects">Projects</string>
    <string name="rtp_my_account">My Account</string>
    <string name="rtp_check_for_updates">Check for Updates</string>
    <string name="rtp_search">Search</string>
    <string name="rtp_top_story">Top Stories</string>
    <string name="rtp_top_story_item_image">rtp_top_story_item_image</string>
    <string name="rtp_void">Void</string>
    <string name="xheghun_gmail_com">xheghun@gmail.com</string>
    <array name="rtp_story_titles">
        <item>Lorem Ipsum</item>
        <item>Project X</item>
        <item>Rowtian Tech Launches</item>
        <item>Tensor Flow</item>
        <item>Yet Another app</item>
        <item>Chimichangas</item>
        <item>ML is Rowtian Tech way</item>
    </array>
    <array name="rtp_story_texts">
        <item>lorem ipsum porem smapll ajkm anak
            amama asjs kjwkjw wkjwkjwkj  skwjkw wkjwkuwkw wkwkjwk kwuwuw wkjwkjwiw wjuwkjwi wkhwkhw
            jwkjwkjw.
        </item>
        <item>lorem ipsum porem smapll ajkm anak
            amama asjs kjwkjw wkjwkjwkj  skwjkw wkjwkuwkw wkwkjwk kwuwuw wkjwkjwiw wjuwkjwi wkhwkhw
            jwkjwkjw.
        </item>
        <item>lorem ipsum porem smapll ajkm anak
            amama asjs kjwkjw wkjwkjwkj  skwjkw wkjwkuwkw wkwkjwk kwuwuw wkjwkjwiw wjuwkjwi wkhwkhw
            jwkjwkjw.
        </item>
        <item>lorem ipsum porem smapll ajkm anak
            amama asjs kjwkjw wkjwkjwkj  skwjkw wkjwkuwkw wkwkjwk kwuwuw wkjwkjwiw wjuwkjwi wkhwkhw
            jwkjwkjw.
        </item>
        <item>lorem ipsum porem smapll ajkm anak
            amama asjs kjwkjw wkjwkjwkj  skwjkw wkjwkuwkw wkwkjwk kwuwuw wkjwkjwiw wjuwkjwi wkhwkhw
            jwkjwkjw.
        </item>
        <item>lorem ipsum porem smapll ajkm anak
            amama asjs kjwkjw wkjwkjwkj  skwjkw wkjwkuwkw wkwkjwk kwuwuw wkjwkjwiw wjuwkjwi wkhwkhw
            jwkjwkjw.
        </item>
        <item>lorem ipsum porem smapll ajkm anak
            amama asjs kjwkjw wkjwkjwkj  skwjkw wkjwkuwkw wkwkjwk kwuwuw wkjwkjwiw wjuwkjwi wkhwkhw
            jwkjwkjw.
        </item>
    </array>
    <array name="rtp_project_names">
        <item>KHhksksks</item>
        <item>OQWksmns</item>
        <item>smsmns</item>
        <item>sjkjskks</item>
        <item>shjkskh</item>
        <item>ouwouowu</item>
        <item>qwkakks</item>
        <item>wskjskjskj</item>
        <item>snsmnms</item>
        <item>Kksjsk</item>
        <item>mshshKk</item>
        <item>sjjhsjhjso</item>
    </array>
    <array name="rtp_project_desc">
        <item>JSHJkhskjhs skskus skskuskuki suwuius skuskjs oiusi</item>
        <item>JSHJkhskjhs skskus skskuskuki suwuius skuskjs oiusi</item>
        <item>JSHJkhskjhs skskus skskuskuki suwuius skuskjs oiusi</item>
        <item>JSHJkhskjhs skskus skskuskuki suwuius skuskjs oiusi</item>
        <item>JSHJkhskjhs skskus skskuskuki suwuius skuskjs oiusi</item>
        <item>JSHJkhskjhs skskus skskuskuki suwuius skuskjs oiusi</item>
        <item>JSHJkhskjhs skskus skskuskuki suwuius skuskjs oiusi</item>
        <item>JSHJkhskjhs skskus skskuskuki suwuius skuskjs oiusi</item>
        <item>JSHJkhskjhs skskus skskuskuki suwuius skuskjs oiusi</item>
        <item>JSHJkhskjhs skskus skskuskuki suwuius skuskjs oiusi</item>
        <item>JSHJkhskjhs skskus skskuskuki suwuius skuskjs oiusi</item>
        <item>JSHJkhskjhs skskus skskuskuki suwuius skuskjs oiusi</item>
    </array>
</resources>
