<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RTPLoginFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_flash_auto_black_24dp"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/rtp_logo"
            android:layout_width="64dp"
            android:layout_gravity="center"
            android:layout_height="64dp" />
        <LinearLayout
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextAppearance.RTP.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondary"
                android:text="@string/rtp_rowtian" />

            <TextView
                style="@style/TextAppearance.RTP.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rtp_technologies" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="80dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/rtp_client_name"
                style="@style/Widget.RTP.TextInputLayout"
                android:id="@+id/rtp_client_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rtp_client_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                app:errorEnabled="true"
                android:layout_marginTop="8dp"
                style="@style/Widget.RTP.TextInputLayout"
                android:id="@+id/rtp_access_code_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rtp_access_code">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rtp_access_code_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp">
                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.RTP.Button.Elevated"
                    android:id="@+id/rtp_login_button"
                    android:layout_width="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_height="wrap_content"
                    android:text="@string/rtp_login_button_text"/>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    style="@style/Widget.RTP.TextButton"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/rtp_login_button"
                    android:layout_marginEnd="10dp"
                    android:text="@string/rtp_text_button"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="50dp"
                android:text="@string/rtp_copyright" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>